8160851: Remove old launcher module-related options
Reviewed-by: jjg, alanb